feat(server): add GraalVM support